[gd_scene load_steps=3 format=3 uid="uid://dkds6rp3a4db8"]

[ext_resource type="Script" path="res://level/customer_slots.gd" id="1_i164a"]
[ext_resource type="PackedScene" uid="uid://w5x60v6ec45x" path="res://level/customer_slot.tscn" id="2_xcdpk"]

[node name="CustomerSlots" type="Node2D"]
script = ExtResource("1_i164a")

[node name="CustomerSlot" parent="." instance=ExtResource("2_xcdpk")]
unique_name_in_owner = true
position = Vector2(255, -2)

[node name="CustomerSlot2" parent="." instance=ExtResource("2_xcdpk")]
unique_name_in_owner = true
position = Vector2(211, -1)

[node name="CustomerSlot3" parent="." instance=ExtResource("2_xcdpk")]
unique_name_in_owner = true
position = Vector2(165, 0)

[node name="CustomerSlot4" parent="." instance=ExtResource("2_xcdpk")]
unique_name_in_owner = true
position = Vector2(120, 0)
